ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
@import '../../../../src/assets/css/qbVariables';
$row-background-color-hover: $color-blue-200;
$row-cell-border-color: $color-black-300;
$row-bg-color: $color-black-100;
$row-non-editable-bg-color: $color-black-200;
$row-border-color: $color-black-300;
$row-box-shadow-color: $color-black-300;
$cell-edit-background-edit: $color-blue-200;
$grid-font-size: $font-size-p;
$grid-default-group-padding: 20px;
$grid-default-cell-padding: 4px;
$grid-group-expand-icon-size: 20px;
$cell-edit-background-edit: $color-blue-200;
$edit-icon-font-size: 18px;

.qbGrid > thead, .qbGrid > tbody {
    color: $default-text-onlight-color;
    -webkit-font-smoothing: antialiased;
    table-layout: fixed;

    > td {
        vertical-align: top;
    }
}

.qbGrid {
    //margin: 2px;

    flex: 1 1 auto;
    overflow: auto;
    display: block;
    width: 100%;
    border-collapse: initial; // needed for sticky column

    .qbIcon {
        font-size: $grid-group-expand-icon-size;
        width: $grid-group-expand-icon-size;
    }

    .cellEditIcon {
        display: none;
        color: $ghost-text-color;
        opacity: 0.6;
        position: absolute;
        top: 4px;
        right: 0;

        &:hover {
            color: $default-hover-color;
            opacity: 1;
            background-color: rgba($color-black-100, 0.6);
        }
    }

    .AlignRight .cellEditIcon {
        right: auto;
        left: 0;
    }

    .qbCell:hover .cellEditIcon {
        display: inline;
    }

    .qbCell .editingCell .cellEditIcon {
        display: none;
    }

    .emptyRowActions {
        width: 75px;
    }

    .groupHeader {
        padding-left: $grid-default-group-padding + 3;
        vertical-align: top;
        font-weight: bold;
    }

    //assuming that we can have up to 6 group levels
    @for $i from 1 through 6 {
        .subHeaderLevel-#{$i} {
            .subHeaderCell {
                padding-left: $i * $grid-default-group-padding;
            }
        }
    }

    .dateCell, .durationCell, .phoneCell, .urlField {
        white-space: nowrap;
    }

    .AlignRight {
        text-align: right;
    }

    .AlignCenter {
        text-align: center;
    }

    .gridHeaderCell {
        display: flex;
        align-items: center;

        .gridHeaderLabel {
            flex-grow: 1;
            padding-right: 4px;
        }

        .headerMenu {
            flex-grow: 0;

            button {
                padding: 0;
                margin: 0;
                border: 0;
                background: inherit;
                width: $grid-group-expand-icon-size;
                height: $grid-group-expand-icon-size;
                opacity: 0.2;
            }
        }

        &:hover .headerMenu .dropdownToggle {
            opacity: 1;
        }
    }

    .cellWrapper {
        width: 100%;
        //this adjusts the height for rendered rows
        padding-top: 6px;
        //Turns out it works better without a min width
        //Min width of 200px sets the rendered rows to 200 px minimum
        //min-width: 200px;
        //min-height: 32px;
        position: relative;

        &.numberFormat,
        &.currencyFormat,
        &.percentFormat,
        &.durationFormat.wUnitsText {
            text-align: right;
        }

        &.checkboxFormat {
            text-align: center;
        }

        &.dateFormat, &.timeFormat {
            min-width: 120px;
        }

        &.dateTimeFormat {
            min-width: 210px;
        }
    }

    .editTools {
        z-index: 1;
        display: flex;
        flex-direction: column;
        flex: 0 0 auto;
        background-color: $qbgrid-cell-edit-background-color;
        box-shadow: -6px 0px 14px $qbgrid-row-box-shadow-color;
        position: absolute;
        top: -47px;
        left: -79px;
        padding: 0 24px;
        border: 1px solid $qbgrid-row-border-color;

        .loadedContent {
            padding: 0;
        }

        .loader {
            padding: 10px 9px;

            .spinner {
                // Need important because the original styles are set directly on the element by react-loader
                left: auto !important;
                top: auto !important;
            }
        }

        button {
            flex: 0 0 auto;
            border: 0;
            background-color: $qbgrid-cell-edit-background-color;
            margin-right: 2px;
            padding: 6px 4px;

            .qbIcon:hover {
                opacity: 1;
            }

            .qbIcon {
                opacity: 0.7;
                width: 20px;
                font-size: 16px;
                vertical-align: top;
            }

            .qbIcon.saveRecord {
                color: $color-green-700;
                font-size: 18px;
            }

            .qbIcon.invalidRecord {
                color: $tootip-error-color;
                font-size: 18px;
                cursor: default;
            }

            .qbIcon.cancelSelection {
                color: $iconfont-on-light-normal-color;
            }

            .qbIcon.deleteRecord {
                color: $color-red-700;
            }

            .qbIcon.addRecord {
                color: $iconfont-on-light-normal-color;
            }

            .qbIcon.disabled.addRecord {
                color: $iconfont-on-light-disabled-color;
            }
        }
    }

    .urlField .btn {
        margin-top: -5px;
        padding: 1px 10px;
    }

}

.qbGrid > thead > tr > th {
    min-width: 80px;
    position: relative;
    z-index: 2;
    white-space: nowrap;
    border-right: 1px solid $color-blue-400;
    border-bottom: 2px solid $badcolor1-color6;
    padding: $grid-default-cell-padding;
    color: $color-blue-600;
    -webkit-font-smoothing: antialiased;
    border-color: $color-blue-400;
    background-color: $color-blue-300;
}
/* ... */

